2009-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: updated left menu with a link to the forum

2009-01-04 Borut Razem <borut.razem AT siol.net>

	* index.php: updated John Hartman's e-mail address,
	  removed mailto links
	* snap.php: changed folder icon with the one found at
	  http://www.iconarchive.com/show/folder-icons-by-kodz-red/folder-B4-6-icon.html
	  images/dir.gif: removed
	  images/folder-B4-6-32x32.png: added

2008-11-14 Borut Razem <borut.razem AT siol.net>

	* snap_footer.php: direct access not possible any more

2008-03-30 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.8.0 release
	* previous.php: previous news moved from index.php

2008-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC2

2008-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC1
	* previous.php: previous news moved from index.php

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* index.php: added Philipp Klaus Krause to the list of developers

2007-10-30 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: updated left menu

2007-10-29 Borut Razem <borut.razem AT siol.net>

	* snap.php: rearranged, added new category Mac OS X

2007-08-20 Borut Razem <borut.razem AT siol.net>

	* index.php, links.php. previous.php, snap_head.php:
	  fixed to pass http://validator.w3.org/ validator

2007-07-10 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: fixed #1751299: subversion link broken

2007-06-18 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to the Sandeep's article moved to the end of
	  Documentation

2007-06-12 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php, left_menu.inc:
	  use new svn URL scheme
	* left_menu.inc: SDCC Wiki moved to
	  http://sdcc.wiki.sourceforge.net/

2007-06-01 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 release
	* previous.php: previous news moved from index.php
